# experiments

./: .gitignore  DIRECTORY.md
amsr/: lmsr.go  lmsr_test.go
api-client/: .gitignore  CLAUDE.md  main.js  package-lock.json  package.json  preload.js
bytecode-vm/: compiler.go  main.go  storage.go  vm.go
conduit/: ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  main.js  package-lock.json  package.json  preload.js
database-gui/: connections.go  go.mod  go.sum  main.go  wails.json
db-gui/: add_db_dialog.py  main.py
db-gui2/: connection_dialog.ui  connectiondialog.cpp  connectiondialog.h  db-gui2.pro  dbtreeitem.cpp  dbtreeitem.h  dbtreemodel.cpp  dbtreemodel.h  dbviewer.cpp  dbviewer.h  dbviewer.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadataview.cpp  metadataview.h  metadataview.ui  querytab.cpp  querytab.h  querytab.ui  scratchpad.ui  sqlproxymodel.cpp  sqlproxymodel.h  utils.cpp  utils.h
dist-lock/: go.mod  main.go
ebiten/: go.mod
email-client/: go.mod  main.go
event-bus-v2/: event_bus.go  event_bus_test.go  go.mod
event-heap/: heap.go
git-server/: main.go
gitsync/: .gitignore  CLAUDE.md  MANUAL.md  README.md  main.js  package-lock.json  package.json  preload.js
kilo/: kilo  (+2 more)
terminus/: Cargo.toml
terminus/src/: app.rs  config.rs  db.rs  main.rs  message.rs
terminus/src/domain/: mod.rs  project.rs  worktree.rs
terminus/src/git/: mod.rs  repo.rs  worktree_cmd.rs
terminus/src/pty/: shell.rs
terminus/src/ui/: landing.rs  mod.rs  modals.rs  project_tabs.rs  project_view.rs  sidebar.rs  tabs.rs  terminal_tab.rs  theme.rs
(+501 files in other folders)
