[package]
name = "terminus"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", features = ["tokio", "advanced"] }
iced_term = "0.8"
rusqlite = { version = "0.39", features = ["bundled"] }
rfd = "0.17"
directories = "6"
anyhow = "1"
ksuid = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
